deployment/k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-hotdog
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hotdog
  template:
    metadata:
      labels:
        app: hotdog
    spec:
      containers:
        - image: public.ecr.aws/m6h8t0n2/not-hotdog:1d351afad7c224d79ca8b0ab04c64c01fc76d598
          name: not-hotdog
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 1024Mi
              cpu: 2000m 
          livenessProbe:
            httpGet:
              path: /health
              port: 6443
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 6443
            periodSeconds: 5
