deployment/k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nothotdog-svc
spec:
  selector:
    app: hotdog
  ports:
    - protocol: TCP
      port: 6443
      targetPort: 6443
  type: ClusterIP
