deployment/k8s/ingressgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nothotdog-ingress
  labels:
    app: nothotdog-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: nothotdog-cert
      hosts:
        - "not-hotdog.matthew-cloud.com"
